# algobattle

./: .gitignore  README.md  algobattle.toml  brazilian_generator  generator.cpp  generator.h  main.cpp
BrazilianSalesman/: algobattle.toml  description.md  problem.py
BrazilianSalesman/generator/: Dockerfile
Pairsum/: .gitignore  algobattle.toml
solver/: Dockerfile
warmup_task/Pairsum/: .gitignore  Kiwis generator.prog  Kiwis solver.prog  algobattle.toml
warmup_task/Pairsum/generator/: Dockerfile
warmup_task/Pairsum/generator/src/: main.cpp
warmup_task/Pairsum/solver/src/: CMakeLists.txt  io.cpp  io.hpp  main.cpp
warmup_task/documentation/: main.tex
